will facilitate easier development of libast-based programs.

Also added the beginnings of a regexp class with support for PCRE,
POSIX-, and BSD-style regular expressions.
----------------------------------------------------------------------
Sun Aug  4 22:38:47 2002                        Michael Jennings (mej)

Apparently shared library building breaks if AC_PROG_CC isn't directly
in configure.in.... :(
----------------------------------------------------------------------
Sun Aug  4 22:47:33 2002                        Michael Jennings (mej)

Fix the cache variable name.
----------------------------------------------------------------------
Sat Aug 10 12:06:50 2002                        Michael Jennings (mej)

Undefined symbol fix.  Got overzealous with my s///.
----------------------------------------------------------------------
Tue Aug 13 21:38:04 2002                        Michael Jennings (mej)

Working implementation of a regular expression object which supports
(and abstracts) PCRE, POSIX, or BSD regular expression functionality.
Also fixed some bugs with the list code and the cpp stuff.
----------------------------------------------------------------------
Tue Aug 13 22:47:45 2002                        Michael Jennings (mej)

Oops, disable those old functions for now.
----------------------------------------------------------------------
Mon Aug 19 21:02:56 2002                        Michael Jennings (mej)

Added a macro to permit client apps a simple way to detect libast.
----------------------------------------------------------------------
Wed Sep 25 00:01:29 2002                        Michael Jennings (mej)

Patch from Kirby Kuehl <kkuehl@cisco.com> for compilation on FreeBSD.
----------------------------------------------------------------------
Mon Sep 30 11:53:59 2002                        Michael Jennings (mej)

Final commit for release of libast 0.5.
----------------------------------------------------------------------